# writing-a-c-compiler

./: .gitignore  Cargo.toml  LICENSE.md  NOTES.md  README.md  justfile  pcc.py
ch/1/: .gitignore  Makefile  listing_1.1.s
ch/2/: .gitignore  listing_2.1.s
driver/: driver_bad_preprocessor.c
src/: ast.rs  ast_asm.rs  ast_assembly.rs  ast_c.rs  codegen.rs  compile.rs  driver.rs  emitter.rs  id_gen.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantics.rs  tacky.rs  typecheck.rs
tests/: test_pcc.py
tests/c/: return_logical_ops.c
tests/c/valid/: conditional.c  do_while.c  for.c  function_call.c  goto.c  if_else.c  if_two_functions.c  nested_loops.c  return_increment.c  while.c
