[package]
name = "pcc"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_matches = "1.5.0"
clap = { version = "4.5.32", features = ["derive"] }
thiserror = "1.0.69"
env_logger = "0.11.7"
log = "0.4.27"
anyhow = "1.0.97"

[dependencies.winnow]
version = "0.7.4"
#features = ["debug"]

[dev-dependencies]
assert_matches = "1.5.0"
