[package]
name = "pcc"
version = "0.1.0"
edition = "2024"
default-run = "pcc"

[dependencies]
assert_matches = "1.5.0"
clap = { version = "4.5.37", features = ["derive"] }
thiserror = "2.0.12"
env_logger = "0.11.8"
log = "0.4.27"
anyhow = "1.0.98"
line-numbers = "0.4.0"
derive_more = { version = "2.0.1" , features = ["display"]}

[dependencies.winnow]
version = "0.7.9"
#features = ["debug"]

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.4.1"
assertables = "9.8.0"

[[bin]]
name = "compile"
path = "src/compile.rs"

[[bin]]
name = "pcc"
path = "src/driver.rs"
